# Rust_WebApp_Sample

./: .gitignore  Cargo.toml  README.md  Rocket.toml
src/: main.rs  model.rs  todo_type.rs
templates/: index.tera
