[package]
name = "todo_list"
version = "0.1.0"
authors = ["issei_itagaki <i-itagaki@atware.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#Rocket
[dependencies]
rocket="0.4.5"
rusqlite={version = "0.23", features=["bundled"]}
#Tera
[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["tera_templates"]